--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,3 +14,142 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+
+/*.scroll-content{
+    padding-bottom: 0px !important;
+}*/
+.content-app, .content-app-game {
+	height: 100%;
+	position: relative;
+}
+.content-app .custom-btn {
+	position: absolute;
+	background-color: #444f68;
+	bottom: 20%;
+	right: 0;
+	left: 0;
+	margin: auto;
+	width: 70%;
+}
+.content-app img {
+	width: 25%;
+	position: absolute;
+	right: 0;
+	left: 0;
+	margin: auto;
+	top: 20%;
+}
+.content-app .result-img img {
+	width: 25%;
+	position: relative;
+	top: 0;
+}
+.content-app-game .game-time, .content-app .game-score {
+	font-size: 18px;
+}
+.content-app-game .game-time {
+	border: 2px inset #4f6844;
+	color: #444f68;
+	font-weight: 700;
+	background-color: rgba(79, 104, 68, 0.2);
+}
+.content-app-game .game-score {
+	color: #444f68;
+	text-align: left;
+}
+.content-app-game .game-score b {
+	color: #4f6844;
+}
+.content-app-game .game-score span {
+	font-size: 16px;
+}
+.content-app-game .game-point {
+	margin-top: 20px;
+	color: #4f6844;
+}
+.content-app-game .game-title {
+	font-size: 18px;
+	color: #444f68;
+	font-weight: 600;
+	margin-top: 15px;
+}
+.content-app-game .game-clue {
+	color: #444f68;
+	font-weight: 400;
+	font-size: 16px;
+}
+.content-app-game .game-answer input {
+	border: 2px solid rgba(79, 104, 68, 0.2);
+	padding: 10px;
+	text-align: center;
+	margin-top: 25px;
+}
+.content-app-game .jump-btn {
+	background-color: #4f6844;
+}
+.content-app-game .check-btn {
+	background-color: #444f68;
+}
+.content-app-game .jump-btn:hover:not(.disable-hover) {
+	background-color: #4f6844;
+	opacity: 0.8;
+}
+.content-app-game .check-btn:hover:not(.disable-hover) {
+	background-color: #444f68;
+	opacity: 0.8;
+}
+.toast-successful .toast-message, .toast-wrong .toast-message {
+	text-align: center;
+	font-weight: 600;
+}
+.toast-successful .toast-wrapper, .toast-wrong .toast-wrapper {
+	background-color: rgba(204, 204, 204, 0.4);
+}
+.toast-successful .toast-message {
+	color: #05ba12;
+}
+.toast-wrong .toast-message {
+	color: #ea0707;
+}
+.content-app .result-statistics {
+	padding: 2px 5px;
+}
+.content-app .result-statistics span {
+	font-size: 16px;
+	color: #4f6844;
+}
+.content-app .result-statistics b {
+	color: #444f68;	
+}
+.content-app .content-result {
+	margin: 5px 0px;
+	padding: 20px 0px;
+	background-color: rgba(79, 104, 68, 0.2);
+}
+.content-app .result-btn {
+	background-color: #444f68;
+}
+.content-app .result-title {
+	margin-top: 25px;
+	color: #444f68;
+}
+.content-app .result-quizzes {
+	font-size: 12px;
+	color: #444f68;
+	margin-bottom: 20px;
+}
+.bg-color-0 {
+	background-color: rgba(104, 68, 79, 0.3);
+}
+.bg-color-1 {
+	background-color: rgba(79, 104, 68, 0.3);
+}
+.result-score {
+	color: #fff;
+}
+/*ion-app.md [padding] .scroll-content {
+	padding-bottom: 100px !important;
+}*/
+/*.input-cover {
+	position: relative;
+}*/
