--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -18,26 +18,38 @@
 /*.scroll-content{
     padding-bottom: 0px !important;
 }*/
+
+.scroll-content {
+	background-image: url("../assets/imgs/bg.png");
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
 .content-app, .content-app-game {
 	height: 100%;
 	position: relative;
 }
-.content-app .custom-btn {
+.content-app .custom-start {
 	position: absolute;
-	background-color: #444f68;
-	bottom: 20%;
 	right: 0;
 	left: 0;
+	top: 20px;
+	bottom: 0;
 	margin: auto;
-	width: 70%;
+	text-align: center;
+	width: 80%;
+	//height: %;
 }
-.content-app img {
-	width: 25%;
+.content-app .custom-start .custom-refresh {
 	position: absolute;
 	right: 0;
-	left: 0;
-	margin: auto;
-	top: 20%;
+}
+.content-app .custom-start .custom-btn {
+	background-color: #444f68;
+	width: 90%;
+}
+.content-app .custom-start img {
+	height: 50%;
 }
 .content-app .result-img img {
 	width: 25%;
@@ -45,7 +57,7 @@
 	top: 0;
 }
 .content-app-game .game-time, .content-app .game-score {
-	font-size: 18px;
+	font-size: 24px;
 }
 .content-app-game .game-time {
 	border: 2px inset #4f6844;
@@ -59,16 +71,18 @@
 }
 .content-app-game .game-score b {
 	color: #4f6844;
+	font-size: 24px;
 }
 .content-app-game .game-score span {
-	font-size: 16px;
+	font-size: 20px;
 }
 .content-app-game .game-point {
 	margin-top: 20px;
 	color: #4f6844;
+	font-size: 16px;
 }
 .content-app-game .game-title {
-	font-size: 18px;
+	font-size: 24px;
 	color: #444f68;
 	font-weight: 600;
 	margin-top: 15px;
@@ -76,16 +90,32 @@
 .content-app-game .game-clue {
 	color: #444f68;
 	font-weight: 400;
-	font-size: 16px;
+	font-size: 22px;
 }
 .content-app-game .game-answer input {
 	border: 2px solid rgba(79, 104, 68, 0.2);
 	padding: 10px;
 	text-align: center;
 	margin-top: 25px;
+	font-size: 18px;
+	background-color: rgba(255, 255, 255, 0.8);
 }
 .content-app-game .jump-btn {
 	background-color: #4f6844;
+}
+.content-app-game .row-label {
+	margin-top: 30px;
+	margin-bottom: 10px;
+}
+.content-app-game .custom-label-quiz {
+	padding: 5px 2px;
+}
+.content-app-game .custom-label-quiz div {
+	padding: 5px 0px;
+	border-radius: 5px;
+	border: solid;
+	color: #fff;
+	font-size: 16px;
 }
 .content-app-game .check-btn {
 	background-color: #444f68;
@@ -128,6 +158,7 @@
 }
 .content-app .result-btn {
 	background-color: #444f68;
+	margin-bottom: 40px;
 }
 .content-app .result-title {
 	margin-top: 25px;
@@ -139,10 +170,12 @@
 	margin-bottom: 20px;
 }
 .bg-color-0 {
-	background-color: rgba(104, 68, 79, 0.3);
+	color: #fff;
+	background-color: rgba(104, 68, 79, 0.8);
 }
 .bg-color-1 {
-	background-color: rgba(79, 104, 68, 0.3);
+	color: #fff;
+	background-color: rgba(79, 104, 68, 0.8);
 }
 .result-score {
 	color: #fff;
