--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -20,7 +20,8 @@
 }*/
 
 .scroll-content {
-	background-image: url("../assets/imgs/bg.png");
+	background-image: url("../assets/imgs/bg.jpg");
+	//background-color: #3a3c3e;
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -37,22 +38,28 @@
 	bottom: 0;
 	margin: auto;
 	text-align: center;
-	width: 80%;
+	width: 90%;
 	//height: %;
 }
 .content-app .custom-start .custom-refresh {
 	position: absolute;
 	right: 0;
 }
+.content-app .custom-start .custom-refresh .button-outline-md {
+	color: #ffb100;
+	border-color: #ffb100;
+}
 .content-app .custom-start .custom-btn {
 	background-color: #444f68;
-	width: 90%;
+	width: 100%;
+	border: 1px solid #444;
 }
 .content-app .custom-start img {
-	height: 50%;
+	margin-bottom: 40px;
+	margin-top: 60px;
 }
 .content-app .result-img img {
-	width: 25%;
+	width: 80%;
 	position: relative;
 	top: 0;
 }
@@ -60,35 +67,36 @@
 	font-size: 24px;
 }
 .content-app-game .game-time {
-	border: 2px inset #4f6844;
+	border: 2px inset #ffb100;
 	color: #444f68;
 	font-weight: 700;
-	background-color: rgba(79, 104, 68, 0.2);
+	background-color: #eee;
 }
 .content-app-game .game-score {
 	color: #444f68;
 	text-align: left;
 }
 .content-app-game .game-score b {
-	color: #4f6844;
+	color: #ffb100;
 	font-size: 24px;
 }
 .content-app-game .game-score span {
 	font-size: 20px;
+	color: #eee;
 }
 .content-app-game .game-point {
 	margin-top: 20px;
-	color: #4f6844;
+	color: #ffb100;
 	font-size: 16px;
 }
 .content-app-game .game-title {
 	font-size: 24px;
-	color: #444f68;
+	color: #eee;
 	font-weight: 600;
 	margin-top: 15px;
 }
 .content-app-game .game-clue {
-	color: #444f68;
+	color: #eee;
 	font-weight: 400;
 	font-size: 22px;
 }
@@ -101,7 +109,7 @@
 	background-color: rgba(255, 255, 255, 0.8);
 }
 .content-app-game .jump-btn {
-	background-color: #4f6844;
+	background-color: #ffb100;
 }
 .content-app-game .row-label {
 	margin-top: 30px;
@@ -121,7 +129,7 @@
 	background-color: #444f68;
 }
 .content-app-game .jump-btn:hover:not(.disable-hover) {
-	background-color: #4f6844;
+	background-color: #ffb100;
 	opacity: 0.8;
 }
 .content-app-game .check-btn:hover:not(.disable-hover) {
@@ -133,7 +141,7 @@
 	font-weight: 600;
 }
 .toast-successful .toast-wrapper, .toast-wrong .toast-wrapper {
-	background-color: rgba(204, 204, 204, 0.4);
+	background-color: #eee;
 }
 .toast-successful .toast-message {
 	color: #05ba12;
@@ -146,7 +154,7 @@
 }
 .content-app .result-statistics span {
 	font-size: 16px;
-	color: #4f6844;
+	color: #ffb100;
 }
 .content-app .result-statistics b {
 	color: #444f68;	
@@ -154,7 +162,7 @@
 .content-app .content-result {
 	margin: 5px 0px;
 	padding: 20px 0px;
-	background-color: rgba(79, 104, 68, 0.2);
+	background-color: #fff;
 }
 .content-app .result-btn {
 	background-color: #444f68;
@@ -162,7 +170,7 @@
 }
 .content-app .result-title {
 	margin-top: 25px;
-	color: #444f68;
+	color: #eee;
 }
 .content-app .result-quizzes {
 	font-size: 12px;
@@ -179,6 +187,16 @@
 }
 .result-score {
 	color: #fff;
+}
+.autor-name {
+	margin-top: -50px;
+	margin-bottom: 20px;
+	font-size: 16px;
+	color: #eee;
+}
+.content-app .custom-start .custom-refresh label {
+	font-size: 12px;
+	color: #eee;
 }
 /*ion-app.md [padding] .scroll-content {
 	padding-bottom: 100px !important;
